--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 
 	<title>Sprint Challenge - Anasayfa</title>
+	<link rel="stylesheet" href="css/index.css">
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
@@ -16,13 +17,22 @@
 		<!-- header -->
 		<header>
 			<div>
-				ERGİNEER BAR VE MANGAL
+				<h1>ERGİNEER BAR VE MANGAL</h1>
 
 				<!-- nav -->
-				Menü
-				Rezervasyonlar
-				Özel Teklifler
-				İletişim
+				<nav>
+					<div>
+						<a href="">Menü</a>
+						<a href="">Rezervasyonlar</a>
+						<a href="">Özel Teklifler</a>
+						<a href="">İletişim</a>
+					</div>
+					<div>
+						<i class="fa-brands fa-square-facebook"></i>
+						<i class="fa-brands fa-square-twitter"></i>
+						<i class="fa-brands fa-square-instagram"></i>
+					</div>
+				</nav>
 			</div>
 		</header>
 
@@ -31,23 +41,23 @@
 			<div>
 				<h2>YEMEKLERİMİZ</h2>
 
-				img/food-avocadotoast.jpg
+				<img src="img/food-avocadotoast.jpg" />
 
-				img/food-burger.jpg
+				<img src="img/food-burger.jpg"/>
 
-				img/food-poutine.jpg
+				<img src="img/food-poutine.jpg" />
 
-				img/food-ribs.jpg
+				<img src="img/food-ribs.jpg" />
 
-				img/food-sandwich.jpg
+				<img src="img/food-sandwich.jpg" />
 
-				img/food-sausage.jpg
+				<img src="img/food-sausage.jpg" />
 
-				img/food-steak.jpg
+				<img src="img/food-steak.jpg" />
 
-				img/food-tacos.jpg
+				<img src="img/food-tacos.jpg" />
 
-				img/food-wings.jpg
+				<img src="img/food-wings.jpg" />
 			</div>
 		</section>
 
@@ -64,13 +74,13 @@
 
 				<div class="text">
 					<h3>Güzel Yemekler, Güzel İnsanlar</h3>
-					<p>Quis duis aute, shank ut pork eiusmod in ball tip jerky non. Short ribs tail dolore, fatback in
+					<p>"Quis duis aute, shank ut pork eiusmod in ball tip jerky non. Short ribs tail dolore, fatback in
 						tempor meatloaf pig sunt porchetta beef. Ad hamburger pig veniam, andouille exercitation cillum
 						eiusmod doner irure tail burgdoggen rump chislic officia. Pancetta frankfurter sed, est t-bone
 						porchetta capicola id tri-tip cillum cow leberkas do minim. Sausage ea velit boudin laboris
 						dolore
 						short loin corned beef commodo jowl beef dolor tempor. Dolor culpa enim in meatloaf, ham mollit
-						shankle duis chicken dolore andouille do tenderloin qui.</p>
+						shankle duis chicken dolore andouille do tenderloin qui."</p>
 				</div>
 
 				<div id="bartender" class="pic">
@@ -125,15 +135,23 @@
 		<!-- footer -->
 		<footer>
 			<!-- email signup -->
-			Mail listemize katılın!
-			Üye Ol
+			<div class="email-signup">
+				<p>Mail listemize katılın!</p>
+				<input type="email" placeholder="E-posta Adresi"><button>Üye Ol</button>
+			</div>
 			<!-- nav -->
-			Menü
-			Rezervasyonlar
-			Özel Teklifler
-			İletişim
-			<!-- copyright -->
-			©2022 ERGİNEER Restoran Zinciri, Tüm hakları saklıdır.
+			<div class="nav">
+				<nav>
+					<a href="">Menü</a>
+					<a href="">Rezervasyonlar</a>
+					<a href="">Özel Teklifler</a>
+					<a href="">İletişim</a>
+				</nav>
+				<p class="copyright">
+					<!-- copyright -->
+					©2022 ERGİNEER Restoran Zinciri, Tüm hakları saklıdır.
+				</p> 
+			</div> 
 		</footer>
 	</div>
 </body>
